tests/paczka1/fuzzy1/61142923.err
Error in line 2: IXTV A621 83,C
Error in line 1: hLfW A75 42,9
Error in line 14: gygB1se A75 86,0
Error in line 11: IXTV A621 53,7
Error in line 17: rPYfuJkSkMH A621 92,2
Error in line 16: usVPwKG2grm A186 88,6
Error in line 15: gygB1se A186 89,8
